argo/argocd-test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-hello
spec:
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: go-hello
  minReplicas: 1
  maxReplicas: 10
  metrics:
  - type: Resource
    resource:
      name: cpu
      target:
        type: Utilization
        averageUtilization: 60
    resources:
      name: memory
      target:
        type: Utilization
        averageUtilization: 60
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: go-hello
  template:
    metadata:
      labels:
        app: go-hello
    spec:
      containers:
      - image: sergio21/go-hello:0.0.1
        name: go-hello
        resources:
          requests:
            memory: 5Mi
            cpu: 10m
          limits:
            memory: 10Mi
            cpu: 50m
        ports:
        - containerPort: 8080
