argo/argocd-test-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: go-hello
spec:
  rules:
  - host: 127.0.0.1
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
             name: go-hello
             port:
               number: 8080
